# autosubst2

./: .gitignore  LICENSE  README.md  as2.cabal
.github/workflows/: build.yml
Src/Autosubst/: GenAutomation.hs  GenCode.hs  GenM.hs  Generator.hs  ModularGenerator.hs  Names.hs  Parser.hs  PrintScoped.hs  PrintUnscoped.hs  Signature.hs  Syntax.hs  Tactics.hs  Types.hs
app/: Main.hs
examples/spec/: cbpv.sig  cbpv_bool.sig  cbpv_letrec.sig  fol_param.dot  fol_param.sig  ha.dot  pi_calculus.dot  pi_calculus.sig  sysf_cbv.dot  three_binders.sig
headers/: axioms.v  fintype.v  header_extensible.v  unscoped.v
signatures/: Makefile  README.md  cbpv.sig  cbpv_bool.sig  cbpv_letrec.sig  cps.sig  fol_param.sig  modexp.sig  modexp2.sig  pi_calculus.sig  sysL.sig  sysf.sig  sysf_cbv.sig  sysf_pat.sig  utlc.sig  utlc_cbv.sig  utlc_num.sig  variadic_fin.sig  variadic_list.sig
signatures/test/: .gitignore  Makefile
src/Autosubst/: Agda.hs  Automation.hs  Coq.hs  GenCode.hs  GenDot.hs  GenM.hs  Generator.hs  Lean.hs  ModularGenerator.hs  Names.hs  Parser.hs  Signature.hs  Syntax.hs  Tactics.hs  Types.hs  UCoq.hs
src/Coq/: Makefile
