name:                as2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/as2#readme
license:             BSD3
license-file:        LICENSE
author:              Kathrin Stark, Steven Schäfer, Jonas Kaiser
maintainer:          kstark@ps.uni-saarland.de
copyright:           2019 Kathrin Stark
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      Src
  exposed-modules:     Autosubst.GenM
                     , Autosubst.GenCode
                     , Autosubst.Types
                     , Autosubst.Parser
                     , Autosubst.Signature
                     , Autosubst.Syntax
                     , Autosubst.Generator
                     , Autosubst.ModularGenerator
                     , Autosubst.Tactics
                     , Autosubst.Names
                     , Autosubst.PrintScoped
                     , Autosubst.PrintUnscoped
                     , Autosubst.GenAutomation
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.11
                     , containers >= 0.5
                     , mtl >= 2.2
                     , array >= 0.5
                     , wl-pprint >= 1.2
                     , graphviz >= 2999.18
                     , text >= 1.2
  default-language:    Haskell2010

executable as2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , as2
                     , optparse-applicative >= 0.13.2.0
                     , wl-pprint >= 1.2
                     , directory >= 1.3.0.0
  default-language:    Haskell2010

test-suite as2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      
  main-is:             Spec.hs
  other-modules:       GenSpec
                     , ParseTest
  build-depends:       base
                     , as2
                     , QuickCheck >= 2.9
                     , containers >= 0.5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

--source-repository head
--  type:     git
--  location: https://github.com/githubuser/as2
